prevent svg title text from covering tooltips

--- a/src/css/ui/components/theme-toggle.css
+++ b/src/css/ui/components/theme-toggle.css
@@ -60,6 +60,11 @@
   height: 16px;
 }
 
+.ThemeToggle--sun,
+.ThemeToggle--moon {
+  pointer-events: none;
+}
+
 .ThemeToggle--sun {
   left: 6px;
 }
